# driveboardapp

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
backend/: __init__.py  app.py  bottle.py  build.py  config.py  driveboard.py  flash.py  lasersaur.py  profile_import.py  show.py  test.py  test_raster.py  test_vector.py  test_vector2.py  web.py  window.py
backend/getports/: __init__.py  linuxgetports.py  macgetports.py  wingetports.py
backend/jobimport/: __init__.py  dxf_parser.py  dxf_reader.py  gcode_reader.py  kdtree.py  ngc_reader.py  pathoptimizer.py  png.py  svg_attribute_reader.py  svg_path_reader.py  svg_reader.py  svg_tag_reader.py  svg_text_converter.py  test_dxf_parser.py  utilities.py  webcolors.py
backend/json/: decoder.py  encoder.py
backend/requests/: adapters.py  cookies.py  models.py  sessions.py  status_codes.py  structures.py  utils.py
backend/serial/: rfc2217.py  serialcli.py  serialjava.py  serialposix.py  serialutil.py
deploy/: make.py  requirements.txt
deploy/PyInstaller/: pyinstaller-gui.py  setup.py
docs/: api_high.md  api_low.md  install.md
firmware/: firmware.driveboard1403.hex  firmware.driveboard1403mill.hex  firmware.driveboard1403sync.hex  firmware.driveboardusb.hex  firmware.driveboardusbgecko.hex  firmware.driveboardusbstepped.hex
firmware/src/: config.driveboard1403.h  config.driveboard1403mill.h  config.driveboard1403sync.h  config.driveboardusb.h  config.driveboardusbgecko.h  config.driveboardusbstepped.h  (+7 more)
frontend/: app.html  app.js  controls.js  fills.js  gcodehandler.js  import.js  jobhandler.js  jobview.js  library.js  passes.js  presets.js  request.js  status.js  tools.js
frontend_mill/: app.html  app.js  controls.js  fills.js  import.js  jobhandler.js  jobview.js  queue.js  request.js  status.js
(+105 files in other folders)
